--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A website to play various games">
-    <meta name="keywords" content="games, checkers, connect 4, connect four, game website,">
-    <link href="assets/style.css" rel="stylesheet">
-    <title>The Game Room</title>
+    <meta name="description" content="An interactive Halo quiz based off the game series and books of the same name" />
+    <meta name="keywords"
+      content="Halo, Halo lore, Halo Quiz, Halo Books, Halo Questions" />
+    <!--links for favicon.ico-->
+    <link rel="halo-logo" sizes="180x180" href="assets/images/halo-logo.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/halo-logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/halo-logo.png">
+    <!--script for font awesome icons above external styles.css link so styles.css styles take precedence-->
+    <script src="https://kit.fontawesome.com/b7114f05a1.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Halo Quiz</title>
   </head>
-
-<body>
-    <div class="page-header">
-        <img src="assets/images/the-game-room-logo.png" alt="The-Game-Room-Logo" id="home-page-img">
-        <h5>Choose What You Want To Do</h5>
-    </div>
+  <body>
+    <main>
+      <header>
+        <h1>Halo Legendary Quiz</h1>
+      </header>
+  </body>
+</html>
