Completed main page
Completed the layout for the first page and linked it to the questions script js

--- a/index.html
+++ b/index.html
@@ -21,5 +21,189 @@
       <header>
         <h1>Halo Legendary Quiz</h1>
       </header>
+      <section class="quiz-container">
+        <!-- home quiz screen-->
+        <div class="quiz-home" id="quiz-home-section">
+          <div class="info-bar">
+            <div>
+              <i class="fab fa-fort-awesome home-button "></i>
+            </div>
+            <div class="audio-icon-button">
+              <i class="fas fa-volume-mute audio-off "></i>
+              <i class="fas fa-volume-up audio-on hide"></i>
+            </div>
+          </div>
+          <div class="quiz-home-container">
+            <div class="quiz-text">
+              <h2>Welcome to the Halo Legendary Quiz</h2>
+            </div>
+            <div class="home-btn-container">
+              <button class="btn enter-quiz-btn" id="quiz-button">Quiz</button>
+              <button class="btn highscores-button" id="highscores-btn">High Scores</button>
+              <button id="rules-btn" class="btn rules-button">Rules</button>
+            </div>
+          </div>
+        </div>
+        <!-- Start of rules screen-->
+        <div class="rules-screen hide" id="rules">
+          <div class="info-bar">
+            <div>
+              <i class="fab fa-fort-awesome home-button "></i>
+            </div>
+            <div class="audio-icon-button">
+              <i class="fas fa-volume-mute audio-off "></i>
+              <i class="fas fa-volume-up audio-on hide"></i>
+            </div>
+          </div>
+          <div class="rules-content-container">
+            <h2 class="rules-heading">Rules</h2>
+            <div class="rule-info">
+              <h3> Marine Level - Easy</h3>
+              <ul>
+                <li>Difficulty questions set to easy</li>
+                <li>Timer = 20s </li>
+                <li>2 points for every correct answer</li>
+                <li>No penalty for wrong answers</li>
+              </ul>
+            </div>
+            <div class="rule-info">
+              <h3> Gruntpocalypse Level - Medium</h3>
+              <ul>
+                <li>Difficulty questions set to Medium</li>
+                <li>Timer = 15s </li>
+                <li>5 points for every correct answer</li>
+                <li>3 point penalty for wrong answers or if timer runs out</li>
+              </ul>
+            </div>
+            <div class="rule-info">
+              <h3> LASO Level - Hard</h3>
+              <ul>
+                <li>Difficulty questions set to Hard</li>
+                <li>Timer = 10s </li>
+                <li>2 points + the time left, for every correct answer</li>
+                <li>5 point penalty for wrong answers or if timer runs out</li>
+              </ul>
+            </div>
+            <button id="rules-home-btn" class="play-again-btn home-button">Home</button>
+          </div>
+        </div>
+        <!-- Start of game difficulty screen -->
+        <div class="quiz-difficulty hide" id="quiz-difficulty-section">
+          <div class="info-bar">
+            <div>
+              <i class="fab fa-fort-awesome home-button "></i>
+            </div>
+            <div class="audio-icon-button">
+              <i class="fas fa-volume-mute audio-off "></i>
+              <i class="fas fa-volume-up audio-on hide"></i>
+            </div>
+          </div>
+          <div class="quiz-difficulty-container">
+            <div class="quiz-text">
+              <h2>Select Difficulty</h2>
+            </div>
+            <div class="difficulty-btn-container">
+              <button class="difficulty-btn easy-difficulty" id="easy-difficulty-btn">Marine Level</button>
+              <button class="difficulty-btn medium-difficulty" id="medium-difficulty-btn">Gruntpocalypse Level</button>
+              <button class="difficulty-btn hard-difficulty" id="hard-difficulty-btn">LASO Level</button>
+            </div>
+          </div>
+        </div>
+        <!--Start of quiz start screen-->
+        <div class="quiz-start hide" id="quiz-start-section">
+          <div class="info-bar">
+            <div>
+              <i class="fab fa-fort-awesome home-button"></i>
+            </div>
+            <div class="audio-icon-button">
+              <i class="fas fa-volume-mute audio-off "></i>
+              <i class="fas fa-volume-up audio-on hide"></i>
+            </div>
+          </div>
+          <div class="quiz-start-content">
+            <h2>Are you ready?</h2>
+            <button class="start-button" id="start-btn">Start</button>
+          </div>
+        </div>
+        <!--Start of quiz questions screen-->
+        <div class="quiz-questions-area hide" id="quiz-questions">
+          <div class="info-bar">
+            <div>
+              <i class="fab fa-fort-awesome home-button"></i>
+            </div>
+            <div>
+              <div class="audio-icon-button">
+                <i class="fas fa-volume-mute audio-off "></i>
+                <i class="fas fa-volume-up audio-on hide"></i>
+              </div>
+            </div>
+            <div class="timer-container">
+              <i class="far fa-hourglass"> </i>
+              <div id="timer"></div>
+            </div>
+            <div class="user-score-container">
+              <i class="fas fa-trophy"> </i>
+              <div id="user-score">0</div>
+            </div>
+          </div>
+          <div class="question-number">
+            <h3 id="question-nbr">1</h3>
+          </div>
+          <div class="question-text">
+            <p id="question">Question did not load, please reload and try again.</p>
+          </div>
+          <div class="answer-btn-container" id="ans-btn-container">
+            <button class="answer-btn answer-btn-hover" id="answer-btn-1">Answer 1</button>
+            <button class="answer-btn answer-btn-hover" id="answer-btn-2">Answer 2</button>
+            <button class="answer-btn answer-btn-hover" id="answer-btn-3">Answer 3</button>
+            <button class="answer-btn answer-btn-hover" id="answer-btn-4">Answer 4</button>
+          </div>
+          <div class="next-btn-container">
+            <button id="next-question-btn" class="next-btn next-btn-hover">Next</button>
+          </div>
+        </div>
+        <!--Start of results screen-->
+        <div class="quiz-results hide" id="quiz-results-section">
+          <div class="info-bar">
+            <div>
+              <i class="fab fa-fort-awesome home-button"></i>
+            </div>
+            <div class="audio-icon-button">
+              <i class="fas fa-volume-mute audio-off "></i>
+              <i class="fas fa-volume-up audio-on hide"></i>
+            </div>
+          </div>
+          <div class="results-content-container">
+            <h2 id="user-result-text">Congratulations, you got 9/10 correct on easy mode and a score of </h2>
+            <p id="user-result">18</p>
+            <div class="input-container">
+              <input type="text" name="username" id="username" placeholder="username" />
+              <button type="submit" class="save-button save-button-hover" id="save-score-btn">Save High
+              Score</button>
+              <button id="play-again-button" class="play-again-btn">Home</button>
+            </div>
+          </div>
+        </div>
+        <!--Start of highscores screen-->
+        <div class="highscores hide" id="highscores-section">
+          <div class="info-bar">
+            <div>
+              <i class="fab fa-fort-awesome home-button"></i>
+            </div>
+            <div class="audio-icon-button">
+              <i class="fas fa-volume-mute audio-off "></i>
+              <i class="fas fa-volume-up audio-on hide"></i>
+            </div>
+          </div>
+          <div class="highscores-content-container">
+            <h2>High Scores</h2>
+            <ul id="high-scores-list"></ul>
+            <button id="play-again-button-highscores" class="play-again-btn">Home</button>
+          </div>
+        </div>
+      </section>
+    </main>
+    <script src="assets/js/script.js"></script>
+    <script src="assets/js/questions.js"></script>
   </body>
 </html>
