adding final version of index file

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="An interactive Halo quiz based off the game series and books of the same name" />
+    <meta name="description" content="An interactive Halo quiz based off the game series and books of the same name"/>
     <meta name="keywords"
-      content="Halo, Halo lore, Halo Quiz, Halo Books, Halo Questions" />
+      content="Halo, Halo lore, Halo Quiz, Halo Books, Halo Questions"/>
     <!--links for favicon.ico-->
-    <link rel="halo-logo" sizes="180x180" href="assets/images/halo-logo.png">
+    <link rel="icon" sizes="180x180" href="assets/images/halo-logo.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/halo-logo.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/halo-logo.png">
     <!--script for font awesome icons above external styles.css link so styles.css styles take precedence-->
@@ -204,6 +204,9 @@
       </section>
     </main>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/quiz-audio.js"></script>
+    <script src="assets/js/high-scores.js"></script>
+    <script src="assets/js/timer.js"></script>
     <script src="assets/js/questions.js"></script>
   </body>
 </html>
